apps/base/website/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: website
  labels:
    app: website
spec:
  type: ClusterIP
  selector:
    app: website
  ports:
    - port: 80
      targetPort: 6000
